--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,10 @@
     <name>rm-server</name>
     <modules>
         <module>rm-server-model</module>
+        <module>rm-server-dao</module>
+        <module>rm-server-dao-db</module>
         <module>rm-server-svc</module>
+        <module>rm-server-svc-impl</module>
         <module>rm-server-web</module>
         <module>rm-server-ear</module>
     </modules>
