--- a/rm-server-svc/pom.xml
+++ b/rm-server-svc/pom.xml
@@ -15,6 +15,12 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
+            <version>7.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>me.kuak</groupId>
             <artifactId>rm-server-model</artifactId>
             <version>1.0.0-SNAPSHOT</version>
