--- a/rm-server-web/pom.xml
+++ b/rm-server-web/pom.xml
@@ -26,12 +26,27 @@
         </dependency>
         <dependency>
             <groupId>me.kuak</groupId>
+            <artifactId>rm-server-model</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>me.kuak</groupId>
+            <artifactId>rm-server-dao</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>me.kuak</groupId>
+            <artifactId>rm-server-dao-db</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>me.kuak</groupId>
             <artifactId>rm-server-svc</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>me.kuak</groupId>
-            <artifactId>rm-server-model</artifactId>
+            <artifactId>rm-server-svc-impl</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
