--- a/rm-server-web/pom.xml
+++ b/rm-server-web/pom.xml
@@ -25,6 +25,16 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+        <dependency>
             <groupId>me.kuak</groupId>
             <artifactId>rm-server-model</artifactId>
             <version>1.0.0-SNAPSHOT</version>
