--- a/rm-server-svc-impl/pom.xml
+++ b/rm-server-svc-impl/pom.xml
@@ -15,7 +15,7 @@
     </properties>
     <name>rm-server-svc-impl</name>
     <dependencies>
-         <dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
@@ -40,6 +40,11 @@
             <groupId>me.kuak</groupId>
             <artifactId>rm-server-dao-db</artifactId>
             <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3</version>
         </dependency>
     </dependencies>
 </project>
