--- a/rm-server-svc/pom.xml
+++ b/rm-server-svc/pom.xml
@@ -25,5 +25,10 @@
             <artifactId>rm-server-model</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3</version>
+        </dependency>
     </dependencies>
 </project>
