--- a/rm-server-model/pom.xml
+++ b/rm-server-model/pom.xml
@@ -26,5 +26,10 @@
             <version>7.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>eclipselink</artifactId>
+            <version>2.5.1</version>
+        </dependency>
     </dependencies>
 </project>
